--- a/Group 4E ML (1).ipynb
+++ b/Group 4E ML (1).ipynb
@@ -1020,28 +1020,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Support Vector Machine (SVM) Accuracy: 0.6529740387775221\n"
-          ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'nb_accuracy' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[10], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m svm_accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, svm_predictions)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSupport Vector Machine (SVM) Accuracy:\u001b[39m\u001b[38;5;124m\"\u001b[39m, svm_accuracy)\n\u001b[1;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNaive Bayes Accuracy:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mnb_accuracy\u001b[49m)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# You can also print classification reports for more detailed evaluation\u001b[39;00m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSupport Vector Machine (SVM) Classification Report:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'nb_accuracy' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "    \n",
@@ -1049,7 +1030,7 @@
         "# Preprocess your data if necessary (e.g., cleaning, tokenization, etc.)\n",
         "\n",
         "# Split data into training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(data['Rating'], data['Review_text'], test_size=0.2, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(df['Rating'], df['Review_text'], test_size=0.2, random_state=42)\n",
         "\n",
         "# Vectorize text data using TF-IDF\n",
         "vectorizer = TfidfVectorizer(max_features=1000)  # You can adjust max_features as needed\n",
